feat: refactor authentication service; implement interface and separate implementation, enhance user authentication logic New tests were written for new services and old ones were fixed.