@@ -2,8 +2,12 @@ package com.epam.project.service.impl;
 
 import com.epam.project.dao.TraineeDao;
 import com.epam.project.dao.TrainerDao;
+import com.epam.project.dao.TrainingDao;
+import com.epam.project.dao.UserDao;
 import com.epam.project.model.Trainee;
 import com.epam.project.model.Trainer;
+import com.epam.project.model.Training;
+import com.epam.project.model.User;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -11,9 +15,11 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.Collections;
-import java.util.Date;
 import java.util.List;
+import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
@@ -28,89 +34,98 @@ public class TraineeServiceImplTest {
     @Mock
     private TrainerDao trainerDao;
 
+    @Mock
+    private TrainingDao trainingDao;
+
+    @Mock
+    private UserDao userDao;
+
     @InjectMocks
     private TraineeServiceImpl traineeService;
 
-    private Date testDate;
+    private LocalDate testDate;
+    private User testUser;
     private Trainee testTrainee;
 
     @BeforeEach
     void setUp() {
-        testDate = new Date();
-        testTrainee = new Trainee(1L, "John", "Doe", "John.Doe", "password123", true, testDate, "Kyiv");
+        testDate = LocalDate.of(1990, 5, 15);
+        testUser = new User(1L, "John", "Doe", "John.Doe", "password123", true);
+        testTrainee = new Trainee(1L, testDate, "Kyiv", testUser, new ArrayList<>(), null);
     }
 
     @Test
     void testCreateProfileSuccess() {
-        when(traineeDao.findAll()).thenReturn(Collections.emptyList());
-        when(trainerDao.findAll()).thenReturn(Collections.emptyList());
-
+        when(userDao.findUsernamesByPrefix("John.Doe")).thenReturn(Collections.emptyList());
         when(traineeDao.save(any(Trainee.class))).thenReturn(testTrainee);
 
         Trainee result = traineeService.createProfile("John", "Doe", testDate, "Kyiv");
 
         assertNotNull(result);
-        assertEquals("John.Doe", result.getUsername());
+        assertEquals("John.Doe", result.getUser().getUsername());
+        assertEquals("John", result.getUser().getFirstName());
+        assertEquals("Doe", result.getUser().getLastName());
+        assertEquals(testDate, result.getDateOfBirth());
+        assertEquals("Kyiv", result.getAddress());
 
+        verify(userDao, times(1)).findUsernamesByPrefix("John.Doe");
         verify(traineeDao, times(1)).save(any(Trainee.class));
     }
 
     @Test
     void testCreateProfileWithExistingUsernames() {
-        Trainee existingTrainee = new Trainee(1L, "John", "Doe", "John.Doe", "pass", true, testDate, "Kyiv");
-
-        when(traineeDao.findAll()).thenReturn(List.of(existingTrainee));
-        when(trainerDao.findAll()).thenReturn(Collections.emptyList());
-
-        Trainee expectedTrainee = new Trainee(2L, "John", "Doe", "John.Doe1", "pass", true, testDate, "Kyiv");
+        when(userDao.findUsernamesByPrefix("John.Doe")).thenReturn(List.of("John.Doe"));
+        Trainee expectedTrainee = new Trainee(2L, testDate, "Kyiv", new User(2L, "John", "Doe", "John.Doe1", "password123", true), new ArrayList<>(), null);
         when(traineeDao.save(any(Trainee.class))).thenReturn(expectedTrainee);
 
         Trainee result = traineeService.createProfile("John", "Doe", testDate, "Kyiv");
 
         assertNotNull(result);
-        assertEquals("John.Doe1", result.getUsername());
+        assertEquals("John.Doe1", result.getUser().getUsername());
+
+        verify(userDao, times(1)).findUsernamesByPrefix("John.Doe");
+        verify(traineeDao, times(1)).save(any(Trainee.class));
     }
 
     @Test
     void testSelectProfileSuccess() {
-        when(traineeDao.findById(1L)).thenReturn(testTrainee);
+        when(traineeDao.findByUsername("John.Doe")).thenReturn(Optional.of(testTrainee));
 
-        Trainee result = traineeService.selectProfile(1L);
+        Trainee result = traineeService.selectProfile("John.Doe");
 
         assertNotNull(result);
-        assertEquals("John.Doe", result.getUsername());
-        verify(traineeDao, times(1)).findById(1L);
+        assertEquals("John.Doe", result.getUser().getUsername());
+        assertEquals("John", result.getUser().getFirstName());
+        assertEquals("Doe", result.getUser().getLastName());
+        verify(traineeDao, times(1)).findByUsername("John.Doe");
     }
-
 
     @Test
     void testSelectProfileNotFound() {
-        when(traineeDao.findById(999L)).thenReturn(null);
+        when(traineeDao.findByUsername("nonexistent")).thenReturn(Optional.empty());
 
-        Trainee result = traineeService.selectProfile(999L);
+        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class,
+            () -> traineeService.selectProfile("nonexistent"));
 
-        assertNull(result);
-        verify(traineeDao, times(1)).findById(999L);
+        assertEquals("Trainee with username nonexistent not found", exception.getMessage());
+        verify(traineeDao, times(1)).findByUsername("nonexistent");
     }
-
 
     @Test
     void testUpdateProfileSuccess() {
-
         when(traineeDao.save(testTrainee)).thenReturn(testTrainee);
 
         Trainee result = traineeService.updateProfile(testTrainee);
 
         assertNotNull(result);
-        assertEquals("John.Doe", result.getUsername());
+        assertEquals("John.Doe", result.getUser().getUsername());
         verify(traineeDao, times(1)).save(testTrainee);
     }
 
     @Test
     void testDeleteProfileSuccess() {
+        traineeService.deleteProfile("John.Doe");
 
-        traineeService.deleteProfile(1L);
-
-        verify(traineeDao, times(1)).delete(1L);
+        verify(traineeDao, times(1)).deleteByUsername("John.Doe");
     }
 }
